fixed bug: fixed the z-index of the navbar side menu

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -66,7 +66,9 @@ svg{
 }
 
 .sideMenu {
-    position: absolute;
+    /* position: absolute; */
+    position: fixed;
+    z-index: 100;
     background-color: #fff;
     height: 100vh;
     top: 80px;
